# Infinex

./: .gitignore  .travis.yml  COPYING  INSTALL  Makefile.am  README.md  configure.ac  libinfinexconsensus.pc.in
build-aux/m4/: bitcoin_find_bdb48.m4  bitcoin_qt.m4
contrib/: README.md  infinex-qt.pro  infinexd.bash-completion  qt_translations.py  tidy_datadir.sh
contrib/debian/: README.md  changelog  control  copyright  infinex-qt.desktop  infinex-qt.install  infinex-qt.lintian-overrides  infinex-qt.protocol  infinex-tx.install  infinexd.bash-completion  infinexd.examples  infinexd.install  infinexd.lintian-overrides  infinexd.manpages  rules  watch
contrib/devtools/: README.md  update-translations.py
contrib/gitian-descriptors/: README.md  gitian-linux.yml  (+3 more)
depends/: README.md
doc/: Doxyfile  README.md  README_windows.txt  bips.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  developer-notes.md  dnsseed-policy.md  files.md  gitian-building.md  guide-startmany.md  init.md  instantsend.md  keepass.md  masternode_conf.md  multiwallet-qt.md  reduce-traffic.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  travis-ci.txt  unit-tests.md  zmq.md
infinex-docs/: protocol-documentation.md
qa/: README.md
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  activemasternode.cpp  activemasternode.h  alert.cpp  amount.cpp  amount.h  base58.h  bip39.h  bip39_english.h  cachemap.h  cachemultimap.h  chainparams.cpp  chainparams.h  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  clientversion.cpp  clientversion.h  coins.h  compat.h  darksend-relay.cpp  darksend-relay.h  dsnotificationinterface.cpp  flat-database.h  governance-classes.cpp  governance-classes.h  governance-exceptions.h  governance-misc.h  governance-object.cpp  governance-object.h  governance-validators.cpp  governance-validators.h  governance-vote.cpp  governance-vote.h  governance-votedb.cpp  governance-votedb.h  (+67 more)
src/InfiniDEX/: activenoderole.cpp  activenoderole.h  actualtrade.cpp  actualtrade.h  chartdata.cpp  chartdata.h  coininfo.cpp  coininfo.h  marketoverview.cpp  markettradehistory.cpp  markettradehistory.h  noderole.cpp  noderole.h  nodesetup.cpp  nodesetup.h  orderbook.cpp  orderbook.h  trade.cpp  trade.h  trademanager.cpp  trademanager.h  tradepair.cpp  tradepair.h  userbalance.cpp  userbalance.h  userconnection.cpp  userconnection.h  userdeposit.cpp  userdeposit.h  userinfo.h  usertrade.cpp  usertrade.h  usertradehistory.cpp  usertradehistory.h  userwalletaddress.cpp  userwalletaddress.h  userwithdraw.cpp  userwithdraw.h
src/bench/: .gitignore  Examples.cpp  bench.cpp  bench.h  bench_infinex.cpp
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  strnlen.cpp
src/consensus/: consensus.h  params.h
src/crypto/: Lyra2.c  Lyra2.h  Lyra2Z.c  Lyra2Z.h  Sponge.c  Sponge.h  aes_helper.c  common.h
src/drafted/: governance-categories.h  governance-classes.h  governance-keys.cpp  governance-keys.h  governance-types.cpp  governance-types.h
src/leveldb/db/: corruption_test.cc  db_test.cc
src/primitives/: block.cpp
src/qt/: addressbookpage.cpp  addresstablemodel.cpp  askpassphrasedialog.cpp  bitcoinaddressvalidator.cpp  bitcoinamountfield.cpp  bitcoingui.cpp  bitcoingui.h  bitcoinunits.cpp  bitcoinunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  darksendconfig.cpp  editaddressdialog.cpp  guiconstants.h  guiutil.cpp  guiutil.h  infinex.cpp  infinex.qrc  infinex_locale.qrc  infinexstrings.cpp  intro.cpp  macnotificationhandler.mm  masternodelist.cpp  masternodelist.h  networkstyle.cpp  networkstyle.h  notificator.h  openuridialog.cpp  optionsdialog.cpp  optionsmodel.cpp  overviewpage.cpp  overviewpage.h  paymentserver.cpp  paymentserver.h  receiverequestdialog.cpp  recentrequeststablemodel.h  rpcconsole.cpp  sendcoinsdialog.cpp  sendcoinsentry.cpp  (+8 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  darksendconfig.ui  debugwindow.ui  helpmessagedialog.ui  intro.ui  masternodelist.ui  modaloverlay.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: infinex_bg.ts  infinex_de.ts  infinex_en.ts  infinex_es.ts  infinex_fi.ts  infinex_fr.ts  infinex_it.ts  infinex_ja.ts  infinex_pl.ts  infinex_pt.ts  infinex_ru.ts  infinex_sk.ts  infinex_sv.ts  infinex_vi.ts  infinex_zh_CN.ts  infinex_zh_TW.ts
src/qt/res/: RCa35824  infinex-qt-res.rc
src/qt/res/css/: light-hires.css  light.css
src/qt/res/icons/: Thumbs.db  bitcoin.icns
src/qt/res/images/light/: Thumbs.db
src/qt/test/: test_main.cpp  uritests.cpp
src/rpc/: blockchain.cpp  client.cpp  governance.cpp  masternode.cpp  mining.cpp  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  server.cpp  server.h
src/script/: infinexconsensus.cpp  infinexconsensus.h
src/secp256k1/src/: tests.c
src/support/: pagelocker.cpp
src/test/: DoS_tests.cpp  README.md  accounting_tests.cpp  addrman_tests.cpp  alert_tests.cpp  allocator_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bip32_tests.cpp  bip39_tests.cpp  bloom_tests.cpp  bswap_tests.cpp  cachemap_tests.cpp  cachemultimap_tests.cpp  checkblock_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  governance_validators_tests.cpp  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  ratecheck_tests.cpp  reverselock_tests.cpp  rpc_tests.cpp  (+21 more)
src/test/data/: README.md  bitcoin-util-test.json  proposals-invalid.json  proposals-valid.json  sighash.json  tx_invalid.json  tx_valid.json
src/wallet/: db.h  rpcdump.cpp  rpcwallet.cpp  wallet.cpp  wallet.h  walletdb.cpp
src/wallet/test/: wallet_tests.cpp
src/zmq/: zmqconfig.h
(+49 files in other folders)
